* What is new in gsl-1.16:

** converted gsl_multifit_linear_residuals to use dgemv to improve
   efficiency (bug #39153)

** added functions gsl_stats_spearman and gsl_sort_vector2 to compute
   Spearman rank correlation

** added function gsl_poly_dd_hermite_init for Hermite interpolation

** Added support for robust linear least squares

** Added function gsl_linalg_SV_leverage for computing statistical
   leverages from SVD decomposition

** Added support for approximating the Jacobian of nonlinear least
   squares fits using forward finite differences

** Extended gsl_sf_coupling_3j to allow larger range and to handle
   the special case (ja jb jc; 0 0 0)=0 when ja+jb+jc is odd

** Fixed gsl_sf_mathieu_se_array to return zero when the order is zero
   [bug #33679].

** Fixed overflow in gsl_sf_lncosh for large negative x (x<-354).

** Improved gsl_ran_negative_binomial_pdf to avoid underflow/overflow
   for large arguments.

** Multisets now allow k strictly greater than n.

** Fixed gsl_matrix_complex_fwrite/fread failure for noncontiguous
   matrices (Matthias Sitte).

* What was new in gsl-1.15:

** Added Tuomo Keskitalo's new ode branch ode-initval2 with a
   gsl_odeiv2 prefix. This provides proper support for implicit
   solvers.  It is intended to be the new default for differential
   equations.  The existing gsl_odeiv routines will be retained for
   binary compatibility but their interface will be deprecated.

** Added new gsl_integrate_cquad routines for robust integration of
   difficult functions using the doubly-adaptive CQUAD algorithm
   (Pedro Gonnet).

** Added error checking to CBLAS functions (José Luis García Pallero)

** Added a new function gsl_integration_glfixed_point to return
   ordered Gauss-Legendre points and weights contained within a
   gsl_integration_glfixed_table [bug #32237].

** Added a new function gsl_interp_type_min_size to return the size of
   an interpolation type.
