@@ -15,3 +15,5 @@ The following features should be added to the nonlinear least squares routines:
    - number of Jacobian evaluations
 
 2. Support for constraints
+
+3. robust fitting
